# deepin-ocr

./: CMakeLists.txt
debian/: changelog  control.1  rules
src/: CMakeLists.txt  mainwidget.cpp
tests/: test_mainwindow.cpp  test_qtestmain.cpp  test_resulttextview.cpp
translations/: deepin-ocr_ru.ts
